# engine_chatID67890_2025-02-02T05-06-36

./: .env.sample  .gitignore  .replit  README.md  config.py  main.py  pyproject.toml  replit.nix  requirements.txt  run.sh  sessions.json  sessions_cache.json
.codesandbox/: tasks.json
api/: routes_buy_free_spin.py  routes_calculations.py  routes_codesandbox.py  routes_mathsengine.py  routes_simulation.py  routes_spin.py  routes_test.py  test_codesandbox.py
maths_engine/: buy_free_spin.py  configuration.py  isaac_rng.py  isaac_rng_v2.py  plugin_manager.py  process_single_bet.py  simulation.py  slot_machine_engine.py  spin.py  state_manager.py  sticky_options.py
maths_engine/plugins/: __init__.py  base_plugin.py  bonus_round.py  cascading_reels.py  expanding_reels.py  free_spins.py  multiplier_wilds.py  random_wild_modifier.py  scatters.py  stickies.py  time_shifted_reels.py
maths_engine/plugins/testPlugins/: multiplier.py
unittests/: base_test.py  isaac_rng_test.py  numbers.py  quick_depletion_test.py  test_manager.py
