[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
starlette = ">=0.37.2,<0.38.0"
numpy = "^2.0.0"
firebase-admin = "6.5.0"
google-cloud-kms = "2.24.1"
fastapi = "0.111.1"
uvicorn = "0.30.1"
pydantic = "^2.8.2"
icecream = "2.1.3"
matplotlib = "3.9.1"
slowapi = "^0.1.9"
pathspec = "^0.12.1"
python-dotenv = "^1.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"